--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Introduction to Web Design</h1>
-    <p>My name is Catherine Garcia. I am a Media Studies major and a Music minor. In my free time, I enjoy playing the guitar and listening to music. I took this course to learn more about coding and web design!</p>
+    <p>My name is Catherine Garcia. I am a Media Studies major and a Music minor. I took this course to learn more about coding and web design!</p>
     <ul>
       <li>HTML</li>
       <li>CSS</li>
