--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Introduction to Web Design</h1>
     <p>My name is Catherine Garcia. I am a Media Studies major and a Music minor. I took this course to learn more about coding and web design!</p>
     <ul>
-      <li>HTML</li>
+      <a href="./me/index.html"><li>HTML</li></a> 
       <li>CSS</li>
       <li>Raster Graphics</li>
       <li>Vector Graphics</li>
