--- a/index.html
+++ b/index.html
@@ -3,13 +3,65 @@
   <head>
     <meta charset="utf-8">
     <title>Catherine Garcia</title>
+    <style type="text/css">
+body{
+        background-color: black;
+
+      }
+      p {font-family: monospace;}
+
+      p { 
+      text-align: center;
+
+       }
+
+      body {
+  color: floralwhite;
+}
+ body {
+   font-family: monospace;
+  }
+
+h1 {
+  color: floralwhite;
+}
+  
+  h1{
+    text-align: center;
+  }
+
+  </style>
+
   </head>
-  <body>
-    <h1>Introduction to Web Design</h1>
-    <p>My name is Catherine Garcia. I am a Media Studies major and a Music minor. I took this course to learn more about coding and web design!</p>
+  <body style="font-size: 35px">
+    <h1 style="font-size: 38px;">Introduction to Web Design</h1>
+    <p style="font-size: 30px;">My name is Catherine Garcia. I am a Media Studies major and a Music minor. I took this course to learn more about coding and web design!</p>
     <ul>
-      <a href="./me/index.html"><li>HTML</li></a> 
-      <li>CSS</li>
+ <style>
+div.container {
+  text-align: center;
+}
+
+ul.myUL {
+  display: inline-block;
+  text-align: left;
+
+}
+
+
+ul.myUL {
+  
+  border-style: double;
+  border-width: 2px;
+  border-radius: 5px
+
+}
+</style>
+      <div class="container">
+  <ul class="myUL"> 
+ 
+      <li><a href="./me/index.html">HTML</li></a> 
+      <li><a href= "./me_css/index.html">CSS</li></a>
       <li>Raster Graphics</li>
       <li>Vector Graphics</li>
       <li>Website Layout</li>
@@ -17,5 +69,6 @@
       <li>JavaScript</li>
       <li>Final Project</li>
     </ul>
+    </div>
   </body>
 </html>
