--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -21,6 +21,7 @@ body{
  body {
    font-family: monospace;
   }
+   
 
 h1 {
   color: floralwhite;
@@ -42,6 +43,16 @@ div.container {
   text-align: center;
 }
 
+
+div {
+  border: 10px solid whitesmoke;
+  margin-top: 50px;
+  margin-bottom: 100px;
+  margin-right: 150px;
+  margin-left: 150px;
+  background-color: lightblue;
+}
+
 ul.myUL {
   display: inline-block;
   text-align: left;
@@ -52,8 +63,8 @@ ul.myUL {
 ul.myUL {
   
   border-style: double;
-  border-width: 2px;
-  border-radius: 5px
+  border-width: 10px;
+  border-radius: 1px
 
 }
 </style>
