--- a/me_css/pages/music.html
+++ b/me_css/pages/music.html
@@ -1,5 +1,5 @@
  <!DOCTYPE html>
-<html>
+<html style="font-size: 100;">
   <head>
     <meta charset="utf-8">
     <title>Catherine Garcia Music</title>
@@ -50,8 +50,9 @@ href="../styles/style.css">
 
 
 
-<ul> <a href="../index.html"><li>Home</li></a>
-      <a href="./films.html"><li>Films</li></a>
+<ul style="list-style-type: none;">
+    <li><a href="../index.html">Home</a></li>
+    <li><a href="./films.html">Films</a></li>
     </ul> 
 
     </main>
