--- a/me_css/pages/music.html
+++ b/me_css/pages/music.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css"
 href="../styles/style.css">
   </head>
+
   <body>
   	<header>
   		 <h1>Favorite Music</h1>
@@ -15,13 +16,14 @@ href="../styles/style.css">
     </header>
   	<main>
 
-   <p>I listen to music on <a href="https://open.spotify.com">Spotify</a>, play the guitar and produce music. </p>
-   <dl>
-  <dt>Spotify</dt>
-  <dd> a digital music service that gives you access to millions of songs.</dd>
+   <p>I listen to music on many platforms. I listen to music on Spotify and Youtube. I play the guitar and produce music. My favorite genres of music: Metal, Rap, Rock, Experimental, Soul and Latin </p>
 
-<p>Favorite genres of music:
-  Metal, Rap, Rock, Experimental, Soul and Latin</p>
+<dl>
+  <dt>Spotify</dt>
+  <dd> I use Spotify most of the time. I find it the most convenient way to listen to my music on the go.</dd>
+	<dt>Youtube</dt>
+	<dd> I use Youtube to watch the visuals that the artist assigned to the songs. I like to "see" and listen to the music at the same time.</dd>
+</dl>
 
    <h2>Favorite artists </h2>
  
