--- a/raster_graphic/index.html
+++ b/raster_graphic/index.html
@@ -14,7 +14,7 @@
     <main>
  <img  id="catherine" src="me1440.png"
  srcset="images/me1440.png 1440w, images/me960.png 960w, images/me480.png 480w" width="75%" height="auto" alt="catherine">
-
+</main>  
         
 </body>
 </html>
