--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ ul.myUL {
       <li><a href="./me/index.html">HTML</li></a> 
       <li><a href= "./me_css/index.html">CSS</li></a>
       <li><a href= "./raster_graphic/index.html">Raster Graphics</li></a>
-      <li>Vector Graphics</li>
+      <li><a href= "./vector_graphic/index.html">Vector Graphics</li>
       <li>Website Layout</li>
       <li>Responsive Design</li>
       <li>JavaScript</li>
