--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Catherine Garcia</title>
     <style type="text/css">
 body{
-        background-color: black;
+        background-color: lightpink;
 
       }
       p {font-family: monospace;}
