--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Catherine Garcia</title>
     <style type="text/css">
 body{
-        background-color: lightpink;
+        background-color: lightskyblue;
 
       }
       p {font-family: monospace;}
@@ -43,14 +43,13 @@ div.container {
   text-align: center;
 }
 
-
 div {
-  border: 10px solid whitesmoke;
+  border: 10px solid ghostwhite;
   margin-top: 50px;
   margin-bottom: 100px;
-  margin-right: 150px;
-  margin-left: 150px;
-  background-color: lightblue;
+  margin-right: 500px;
+  margin-left: 500px;
+  background-color: lightsteelblue;
 }
 
 ul.myUL {
@@ -63,7 +62,7 @@ ul.myUL {
 ul.myUL {
   
   border-style: double;
-  border-width: 10px;
+  border-width: 22px;
   border-radius: 1px
 
 }
