--- a/index.html
+++ b/index.html
@@ -80,4 +80,68 @@ ul.myUL {
     </ul>
     </div>
   </body>
+
+<body>
+  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 310.24 434.91">
+    <style>
+      svg{ 
+      margin-top: -365;
+      width: 20%;
+      height: auto; 
+    }
+      .cls-1, .cls-2, .cls-3, .cls-4, .cls-5 {
+        stroke: #000;
+      }
+
+      .cls-1, .cls-3 {
+        stroke-width: 6px;
+      }
+
+      .cls-1, .cls-3, .cls-6 {
+        stroke-linecap: round;
+        stroke-linejoin: round;
+      }
+
+      .cls-1, .cls-4 {
+        fill: #000;
+      }
+
+      .cls-2, .cls-4, .cls-5 {
+        stroke-miterlimit: 10;
+        stroke-width: 4px;
+      }
+
+      .cls-2, .cls-6 {
+        fill: none;
+      }
+
+      .cls-3 {
+        fill: #3f3fd1;
+      }
+
+      .cls-6 {
+        stroke: #fff;
+        stroke-width: 11px;
+      }
+
+      .cls-5 {
+        fill: #f9e4a0;
+      }
+    </style>
+  <circle class="cls-5" cx="154" cy="301.41" r="131.5"/>
+  <circle class="cls-4" cx="104.5" cy="266.28" r="24"/>
+  <path class="cls-2" d="M75.88,379.53c7.23-7.39,19.8-18.41,38.26-26.68.62-.28,1.24-.55,1.85-.81,24.57-10.54,52.44-9.91,76.88.93,2.58,1.14,5.2,2.39,7.85,3.76,14.85,7.64,25.97,16.47,33.65,23.59"/>
+  <circle class="cls-4" cx="205.5" cy="266.28" r="24"/>
+    <path class="cls-3" d="M69.2,175.61l-14.49,25.1c-6.44,11.16,1.61,25.1,14.49,25.1h0c12.88,0,20.94-13.95,14.49-25.1l-14.49-25.1Z"/>
+    <path class="cls-3" d="M151.48,175.48l-14.49,25.1c-6.44,11.16,1.61,25.1,14.49,25.1h0c12.88,0,20.94-13.95,14.49-25.1l-14.49-25.1Z"/>
+    <path class="cls-3" d="M232.48,175.48l-14.49,25.1c-6.44,11.16,1.61,25.1,14.49,25.1h0c12.88,0,20.94-13.95,14.49-25.1l-14.49-25.1Z"/>
+    <path class="cls-3" d="M196.03,175.75l-9.41,16.3c-4.18,7.24,1.05,16.3,9.41,16.3h0c8.36,0,13.59-9.05,9.41-16.3l-9.41-16.3Z"/>
+    <path class="cls-3" d="M106.84,175.81l-9.41,16.3c-4.18,7.24,1.05,16.3,9.41,16.3h0c8.36,0,13.59-9.05,9.41-16.3,0,0-9.41-16.3-9.41-16.3Z"/>
+    <path class="cls-1" d="M257.97,50.28c.12-.98.17-1.98.17-2.99,0-17.01-16.6-30.81-37.07-30.81-9.46,0-18.1,2.96-24.65,7.81-10.01-13.18-23.53-21.29-38.42-21.29-12.29,0-23.65,5.53-32.87,14.87-7.64-4.45-17.72-7.16-28.75-7.16-23.93,0-43.33,12.72-43.33,28.4,0,1.27.14,2.51.39,3.74C23.48,53.42,3,74.72,3,99.28c0,35.09,41.81,63.54,93.39,63.54h135.75v-.06c.96.03,1.92.06,2.89.06,39.88,0,72.21-25.86,72.21-57.77,0-25.48-20.64-47.11-49.28-54.77Z"/>
+    <path class="cls-6" d="M54.85,61.84c-19.13,1.02-33.78,17.33-32.76,36.46"/>
+    <path class="cls-6" d="M110.61,23.04c-17.64-4.27-34.33,2.27-37.33,14.62"/>
+     <rect class="cls-1" x="93.02" y="229.95" width="54.57" height="7.11" transform="translate(107.75 495.87) rotate(-150)"/>
+  <rect class="cls-1" x="161.65" y="231.01" width="52.65" height="7.11" transform="translate(-83.96 106.48) rotate(-26.07)"/>
+ <text x="260" y="400" style="fill:blackt;">CG</text>
+</body>
 </html>
