--- a/index.html
+++ b/index.html
@@ -82,66 +82,46 @@ ul.myUL {
   </body>
 
 <body>
-  <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 310.24 434.91">
-    <style>
+<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+   viewBox="0 0 322 458.1" style="enable-background:new 0 0 322 458.1;" xml:space="preserve">
+<style type="text/css">
       svg{ 
       margin-top: -365;
       width: 20%;
       height: auto; 
     }
-      .cls-1, .cls-2, .cls-3, .cls-4, .cls-5 {
-        stroke: #000;
-      }
-
-      .cls-1, .cls-3 {
-        stroke-width: 6px;
-      }
-
-      .cls-1, .cls-3, .cls-6 {
-        stroke-linecap: round;
-        stroke-linejoin: round;
-      }
-
-      .cls-1, .cls-4 {
-        fill: #000;
-      }
-
-      .cls-2, .cls-4, .cls-5 {
-        stroke-miterlimit: 10;
-        stroke-width: 4px;
-      }
-
-      .cls-2, .cls-6 {
-        fill: none;
-      }
-
-      .cls-3 {
-        fill: #3f3fd1;
-      }
-
-      .cls-6 {
-        stroke: #fff;
-        stroke-width: 11px;
-      }
-
-      .cls-5 {
-        fill: #f9e4a0;
-      }
-    </style>
-  <circle class="cls-5" cx="154" cy="301.41" r="131.5"/>
-  <circle class="cls-4" cx="104.5" cy="266.28" r="24"/>
-  <path class="cls-2" d="M75.88,379.53c7.23-7.39,19.8-18.41,38.26-26.68.62-.28,1.24-.55,1.85-.81,24.57-10.54,52.44-9.91,76.88.93,2.58,1.14,5.2,2.39,7.85,3.76,14.85,7.64,25.97,16.47,33.65,23.59"/>
-  <circle class="cls-4" cx="205.5" cy="266.28" r="24"/>
-    <path class="cls-3" d="M69.2,175.61l-14.49,25.1c-6.44,11.16,1.61,25.1,14.49,25.1h0c12.88,0,20.94-13.95,14.49-25.1l-14.49-25.1Z"/>
-    <path class="cls-3" d="M151.48,175.48l-14.49,25.1c-6.44,11.16,1.61,25.1,14.49,25.1h0c12.88,0,20.94-13.95,14.49-25.1l-14.49-25.1Z"/>
-    <path class="cls-3" d="M232.48,175.48l-14.49,25.1c-6.44,11.16,1.61,25.1,14.49,25.1h0c12.88,0,20.94-13.95,14.49-25.1l-14.49-25.1Z"/>
-    <path class="cls-3" d="M196.03,175.75l-9.41,16.3c-4.18,7.24,1.05,16.3,9.41,16.3h0c8.36,0,13.59-9.05,9.41-16.3l-9.41-16.3Z"/>
-    <path class="cls-3" d="M106.84,175.81l-9.41,16.3c-4.18,7.24,1.05,16.3,9.41,16.3h0c8.36,0,13.59-9.05,9.41-16.3,0,0-9.41-16.3-9.41-16.3Z"/>
-    <path class="cls-1" d="M257.97,50.28c.12-.98.17-1.98.17-2.99,0-17.01-16.6-30.81-37.07-30.81-9.46,0-18.1,2.96-24.65,7.81-10.01-13.18-23.53-21.29-38.42-21.29-12.29,0-23.65,5.53-32.87,14.87-7.64-4.45-17.72-7.16-28.75-7.16-23.93,0-43.33,12.72-43.33,28.4,0,1.27.14,2.51.39,3.74C23.48,53.42,3,74.72,3,99.28c0,35.09,41.81,63.54,93.39,63.54h135.75v-.06c.96.03,1.92.06,2.89.06,39.88,0,72.21-25.86,72.21-57.77,0-25.48-20.64-47.11-49.28-54.77Z"/>
-    <path class="cls-6" d="M54.85,61.84c-19.13,1.02-33.78,17.33-32.76,36.46"/>
-    <path class="cls-6" d="M110.61,23.04c-17.64-4.27-34.33,2.27-37.33,14.62"/>
-     <rect class="cls-1" x="93.02" y="229.95" width="54.57" height="7.11" transform="translate(107.75 495.87) rotate(-150)"/>
-  <rect class="cls-1" x="161.65" y="231.01" width="52.65" height="7.11" transform="translate(-83.96 106.48) rotate(-26.07)"/>
- <text x="260" y="400" style="fill:blackt;">CG</text>
+  .st0{fill:#F9E4A0;stroke:#000000;stroke-width:4;stroke-miterlimit:10;}
+  .st1{stroke:#000000;stroke-width:4;stroke-miterlimit:10;}
+  .st2{fill:none;stroke:#000000;stroke-width:4;stroke-miterlimit:10;}
+  .st3{fill:#3F3FD1;stroke:#000000;stroke-width:6;stroke-linecap:round;stroke-linejoin:round;}
+  .st4{stroke:#000000;stroke-width:6;stroke-linecap:round;stroke-linejoin:round;}
+  .st5{fill:none;stroke:#FFFFFF;stroke-width:11;stroke-linecap:round;stroke-linejoin:round;}
+  .st6{stroke:#000000;stroke-miterlimit:10;}
+</style>
+<circle class="st0" cx="160.8" cy="319.2" r="131.5"/>
+<circle class="st1" cx="111.3" cy="284.1" r="24"/>
+<path class="st2" d="M82.7,397.4c7.2-7.4,19.8-18.4,38.3-26.7c0.6-0.3,1.2-0.5,1.8-0.8c24.6-10.5,52.4-9.9,76.9,0.9
+  c2.6,1.1,5.2,2.4,7.9,3.8c14.9,7.6,26,16.5,33.7,23.6"/>
+<circle class="st1" cx="212.3" cy="284.1" r="24"/>
+<g>
+  <path class="st3" d="M76,193.4l-14.5,25.1c-6.4,11.2,1.6,25.1,14.5,25.1l0,0c12.9,0,20.9-13.9,14.5-25.1L76,193.4z"/>
+  <path class="st3" d="M158.3,193.3l-14.5,25.1c-6.4,11.2,1.6,25.1,14.5,25.1l0,0c12.9,0,20.9-13.9,14.5-25.1L158.3,193.3z"/>
+  <path class="st3" d="M239.3,193.3l-14.5,25.1c-6.4,11.2,1.6,25.1,14.5,25.1l0,0c12.9,0,20.9-13.9,14.5-25.1L239.3,193.3z"/>
+  <path class="st3" d="M202.8,193.6l-9.4,16.3c-4.2,7.2,1.1,16.3,9.4,16.3l0,0c8.4,0,13.6-9.1,9.4-16.3L202.8,193.6z"/>
+  <path class="st3" d="M113.6,193.6l-9.4,16.3c-4.2,7.2,1.1,16.3,9.4,16.3l0,0c8.4,0,13.6-9.1,9.4-16.3
+    C123,209.9,113.6,193.6,113.6,193.6z"/>
+  <g>
+    <path class="st4" d="M264.8,68.1c0.1-1,0.2-2,0.2-3c0-17-16.6-30.8-37.1-30.8c-9.5,0-18.1,3-24.6,7.8
+      c-10-13.2-23.5-21.3-38.4-21.3c-12.3,0-23.6,5.5-32.9,14.9c-7.6-4.4-17.7-7.2-28.7-7.2C79.4,28.5,60,41.2,60,56.9
+      c0,1.3,0.1,2.5,0.4,3.7C30.4,71.2,10,92.5,10,117c0,35.1,41.8,63.5,93.4,63.5c0.3,0,0.6,0,1,0l0,0h134.8v-0.1c1,0,1.9,0.1,2.9,0.1
+      c39.9,0,72.2-25.9,72.2-57.8C314,97.4,293.4,75.8,264.8,68.1z"/>
+    <path class="st5" d="M61.6,79.7c-19.1,1-33.8,17.3-32.8,36.5"/>
+    <path class="st5" d="M117.4,40.9c-17.6-4.3-34.3,2.3-37.3,14.6"/>
+  </g>
+</g>
+<rect x="100" y="247.7" transform="matrix(-0.866 -0.5 0.5 -0.866 111.9109 532.5873)" class="st6" width="54.6" height="7.1"/>
+<rect x="168.6" y="248.8" transform="matrix(0.8982 -0.4395 0.4395 0.8982 -91.0743 111.3672)" class="st6" width="52.6" height="7.1"/>
+ <text transform="matrix(1 0 0 1 248.1111 440.2634)" class="st7 st8">CG</text>
+</svg>
 </body>
 </html>
