--- a/index.html
+++ b/index.html
@@ -90,38 +90,89 @@ ul.myUL {
       width: 20%;
       height: auto; 
     }
-  .st0{fill:#F9E4A0;stroke:#000000;stroke-width:4;stroke-miterlimit:10;}
-  .st1{stroke:#000000;stroke-width:4;stroke-miterlimit:10;}
-  .st2{fill:none;stroke:#000000;stroke-width:4;stroke-miterlimit:10;}
-  .st3{fill:#3F3FD1;stroke:#000000;stroke-width:6;stroke-linecap:round;stroke-linejoin:round;}
-  .st4{stroke:#000000;stroke-width:6;stroke-linecap:round;stroke-linejoin:round;}
-  .st5{fill:none;stroke:#FFFFFF;stroke-width:11;stroke-linecap:round;stroke-linejoin:round;}
-  .st6{stroke:#000000;stroke-miterlimit:10;}
-</style>
-<circle class="st0" cx="160.8" cy="319.2" r="131.5"/>
-<circle class="st1" cx="111.3" cy="284.1" r="24"/>
-<path class="st2" d="M82.7,397.4c7.2-7.4,19.8-18.4,38.3-26.7c0.6-0.3,1.2-0.5,1.8-0.8c24.6-10.5,52.4-9.9,76.9,0.9
-  c2.6,1.1,5.2,2.4,7.9,3.8c14.9,7.6,26,16.5,33.7,23.6"/>
-<circle class="st1" cx="212.3" cy="284.1" r="24"/>
-<g>
-  <path class="st3" d="M76,193.4l-14.5,25.1c-6.4,11.2,1.6,25.1,14.5,25.1l0,0c12.9,0,20.9-13.9,14.5-25.1L76,193.4z"/>
-  <path class="st3" d="M158.3,193.3l-14.5,25.1c-6.4,11.2,1.6,25.1,14.5,25.1l0,0c12.9,0,20.9-13.9,14.5-25.1L158.3,193.3z"/>
-  <path class="st3" d="M239.3,193.3l-14.5,25.1c-6.4,11.2,1.6,25.1,14.5,25.1l0,0c12.9,0,20.9-13.9,14.5-25.1L239.3,193.3z"/>
-  <path class="st3" d="M202.8,193.6l-9.4,16.3c-4.2,7.2,1.1,16.3,9.4,16.3l0,0c8.4,0,13.6-9.1,9.4-16.3L202.8,193.6z"/>
-  <path class="st3" d="M113.6,193.6l-9.4,16.3c-4.2,7.2,1.1,16.3,9.4,16.3l0,0c8.4,0,13.6-9.1,9.4-16.3
-    C123,209.9,113.6,193.6,113.6,193.6z"/>
+<svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 591.41 832.04">
+  <defs>
+    <style>
+      .cls-1 {
+        letter-spacing: -.03em;
+      }
+
+      .cls-2, .cls-3, .cls-4, .cls-5, .cls-6, .cls-7, .cls-8 {
+        stroke: #000;
+      }
+
+      .cls-2, .cls-4 {
+        stroke-width: 6px;
+      }
+
+      .cls-2, .cls-4, .cls-9 {
+        stroke-linecap: round;
+        stroke-linejoin: round;
+      }
+
+      .cls-2, .cls-5, .cls-10, .cls-7, .cls-8 {
+        fill: #000;
+      }
+
+      .cls-3, .cls-5, .cls-6 {
+        stroke-miterlimit: 10;
+        stroke-width: 4px;
+      }
+
+      .cls-3, .cls-9 {
+        fill: none;
+      }
+
+      .cls-4 {
+        fill: #3f3fd1;
+      }
+
+      .cls-9 {
+        stroke: #fff;
+        stroke-width: 11px;
+      }
+
+      .cls-10 {
+        font-family: MyriadPro-Bold, 'Myriad Pro';
+        font-size: 38.48px;
+        font-weight: 700;
+        isolation: isolate;
+      }
+
+      .cls-6 {
+        fill: #f9e4a0;
+      }
+
+      .cls-7 {
+        stroke-miterlimit: 10;
+        stroke-width: 1px;
+      }
+
+      .cls-8 {
+        stroke-miterlimit: 10;
+        stroke-width: 1px;
+      }
+    </style>
+  </defs>
+  <circle class="cls-6" cx="293.11" cy="577.06" r="252.98"/>
+  <circle class="cls-5" cx="197.88" cy="509.54" r="46.17"/>
+  <path class="cls-3" d="M142.86,727.5c13.85-14.24,38.09-35.4,73.68-51.37,1.15-.58,2.31-.96,3.46-1.54,47.33-20.2,100.81-19.05,147.94,1.73,5,2.12,10,4.62,15.2,7.31,28.66,14.62,50.02,31.74,64.83,45.4"/>
+  <circle class="cls-5" cx="392.18" cy="509.54" r="46.17"/>
   <g>
-    <path class="st4" d="M264.8,68.1c0.1-1,0.2-2,0.2-3c0-17-16.6-30.8-37.1-30.8c-9.5,0-18.1,3-24.6,7.8
-      c-10-13.2-23.5-21.3-38.4-21.3c-12.3,0-23.6,5.5-32.9,14.9c-7.6-4.4-17.7-7.2-28.7-7.2C79.4,28.5,60,41.2,60,56.9
-      c0,1.3,0.1,2.5,0.4,3.7C30.4,71.2,10,92.5,10,117c0,35.1,41.8,63.5,93.4,63.5c0.3,0,0.6,0,1,0l0,0h134.8v-0.1c1,0,1.9,0.1,2.9,0.1
-      c39.9,0,72.2-25.9,72.2-57.8C314,97.4,293.4,75.8,264.8,68.1z"/>
-    <path class="st5" d="M61.6,79.7c-19.1,1-33.8,17.3-32.8,36.5"/>
-    <path class="st5" d="M117.4,40.9c-17.6-4.3-34.3,2.3-37.3,14.6"/>
+    <path class="cls-4" d="M129.97,335.05l-27.9,48.29c-12.31,21.55,3.08,48.29,27.9,48.29h0c24.82,0,40.21-26.74,27.9-48.29l-27.9-48.29Z"/>
+    <path class="cls-4" d="M288.3,334.86l-27.9,48.29c-12.31,21.55,3.08,48.29,27.9,48.29h0c24.82,0,40.21-26.74,27.9-48.29l-27.9-48.29Z"/>
+    <path class="cls-4" d="M444.13,334.86l-27.9,48.29c-12.31,21.55,3.08,48.29,27.9,48.29h0c24.82,0,40.21-26.74,27.9-48.29l-27.9-48.29Z"/>
+    <path class="cls-4" d="M373.91,335.43l-18.08,31.36c-8.08,13.85,2.12,31.36,18.08,31.36h0c16.16,0,26.16-17.51,18.08-31.36l-18.08-31.36Z"/>
+    <path class="cls-4" d="M202.31,335.43l-18.08,31.36c-8.08,13.85,2.12,31.36,18.08,31.36h0c16.16,0,26.16-17.51,18.08-31.36,0,0-18.08-31.36-18.08-31.36Z"/>
+    <g>
+      <path class="cls-2" d="M493.18,94c.19-1.92.38-3.85.38-5.77,0-32.7-31.94-59.25-71.37-59.25-18.28,0-34.82,5.77-47.33,15.01-19.24-25.39-45.21-40.98-73.87-40.98-23.66,0-45.4,10.58-63.29,28.66-14.62-8.46-34.05-13.85-55.21-13.85-45.98,0-83.3,24.43-83.3,54.64,0,2.5.19,4.81.77,7.12C42.25,99.96,3,140.94,3,188.07c0,67.53,80.41,122.16,179.68,122.16h261.25v-.19c1.92,0,3.66.19,5.58.19,76.76,0,138.9-49.83,138.9-111.2-.58-48.67-40.21-90.23-95.23-105.04Z"/>
+      <path class="cls-9" d="M102.27,116.31c-36.74,1.92-65.02,33.28-63.1,70.22"/>
+      <path class="cls-9" d="M209.62,41.67c-33.86-8.27-65.99,4.42-71.76,28.09"/>
+    </g>
   </g>
-</g>
-<rect x="100" y="247.7" transform="matrix(-0.866 -0.5 0.5 -0.866 111.9109 532.5873)" class="st6" width="54.6" height="7.1"/>
-<rect x="168.6" y="248.8" transform="matrix(0.8982 -0.4395 0.4395 0.8982 -91.0743 111.3672)" class="st6" width="52.6" height="7.1"/>
- <text transform="matrix(1 0 0 1 248.1111 440.2634)" class="st7 st8">CG</text>
+  <rect class="cls-8" x="221.82" y="394.02" width="13.66" height="105.04" transform="translate(-272.39 421.28) rotate(-60)"/>
+  <rect class="cls-7" x="308.1" y="441.66" width="101.19" height="13.66" transform="translate(-160.62 203.29) rotate(-26.07)"/>
+  <text class="cls-10" transform="translate(461.08 809.96)"><tspan class="cls-1" x="0" y="0">C</tspan><tspan x="21.74" y="0">G</tspan></text>
 </svg>
 </body>
 </html>
