--- a/index.html
+++ b/index.html
@@ -80,16 +80,38 @@ ul.myUL {
     </ul>
     </div>
   </body>
-
-<body>
-<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-   viewBox="0 0 322 458.1" style="enable-background:new 0 0 322 458.1;" xml:space="preserve">
 <style type="text/css">
-      svg{ 
+
+  svg{ 
       margin-top: -365;
       width: 20%;
       height: auto; 
-    }
+    } 
+
+.cls-6:hover{
+
+  fill: deeppink;
+}
+
+.cls-6:active{
+
+  fill: darkred;
+}
+
+.cls-2:hover{
+
+  fill: darkslategrey;
+}
+
+.cls-2:active{
+fill: azure;
+
+}
+  
+</style>
+</head>
+<body>
+<?xml version="1.0" encoding="UTF-8"?>
 <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 591.41 832.04">
   <defs>
     <style>
@@ -133,9 +155,8 @@ ul.myUL {
       }
 
       .cls-10 {
-        font-family: MyriadPro-Bold, 'Myriad Pro';
-        font-size: 38.48px;
-        font-weight: 700;
+        font-size: 37.40px;
+        font-weight: 100;
         isolation: isolate;
       }
 
@@ -154,7 +175,7 @@ ul.myUL {
       }
     </style>
   </defs>
-  <circle class="cls-6" cx="293.11" cy="577.06" r="252.98"/>
+  <a href="https://climate.nasa.gov"><circle class="cls-6" cx="293.11" cy="577.06" r="252.98"/></a>
   <circle class="cls-5" cx="197.88" cy="509.54" r="46.17"/>
   <path class="cls-3" d="M142.86,727.5c13.85-14.24,38.09-35.4,73.68-51.37,1.15-.58,2.31-.96,3.46-1.54,47.33-20.2,100.81-19.05,147.94,1.73,5,2.12,10,4.62,15.2,7.31,28.66,14.62,50.02,31.74,64.83,45.4"/>
   <circle class="cls-5" cx="392.18" cy="509.54" r="46.17"/>
@@ -165,7 +186,7 @@ ul.myUL {
     <path class="cls-4" d="M373.91,335.43l-18.08,31.36c-8.08,13.85,2.12,31.36,18.08,31.36h0c16.16,0,26.16-17.51,18.08-31.36l-18.08-31.36Z"/>
     <path class="cls-4" d="M202.31,335.43l-18.08,31.36c-8.08,13.85,2.12,31.36,18.08,31.36h0c16.16,0,26.16-17.51,18.08-31.36,0,0-18.08-31.36-18.08-31.36Z"/>
     <g>
-      <path class="cls-2" d="M493.18,94c.19-1.92.38-3.85.38-5.77,0-32.7-31.94-59.25-71.37-59.25-18.28,0-34.82,5.77-47.33,15.01-19.24-25.39-45.21-40.98-73.87-40.98-23.66,0-45.4,10.58-63.29,28.66-14.62-8.46-34.05-13.85-55.21-13.85-45.98,0-83.3,24.43-83.3,54.64,0,2.5.19,4.81.77,7.12C42.25,99.96,3,140.94,3,188.07c0,67.53,80.41,122.16,179.68,122.16h261.25v-.19c1.92,0,3.66.19,5.58.19,76.76,0,138.9-49.83,138.9-111.2-.58-48.67-40.21-90.23-95.23-105.04Z"/>
+      <a href="https://www.epa.gov/climate-indicators"><path class="cls-2" d="M493.18,94c.19-1.92.38-3.85.38-5.77,0-32.7-31.94-59.25-71.37-59.25-18.28,0-34.82,5.77-47.33,15.01-19.24-25.39-45.21-40.98-73.87-40.98-23.66,0-45.4,10.58-63.29,28.66-14.62-8.46-34.05-13.85-55.21-13.85-45.98,0-83.3,24.43-83.3,54.64,0,2.5.19,4.81.77,7.12C42.25,99.96,3,140.94,3,188.07c0,67.53,80.41,122.16,179.68,122.16h261.25v-.19c1.92,0,3.66.19,5.58.19,76.76,0,138.9-49.83,138.9-111.2-.58-48.67-40.21-90.23-95.23-105.04Z"/>
       <path class="cls-9" d="M102.27,116.31c-36.74,1.92-65.02,33.28-63.1,70.22"/>
       <path class="cls-9" d="M209.62,41.67c-33.86-8.27-65.99,4.42-71.76,28.09"/>
     </g>
