--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ fill: azure;
 <body>
 <?xml version="1.0" encoding="UTF-8"?>
 <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 591.41 832.04">
+  <title>Vector Graphic Logo</title>
   <defs>
     <style>
       .cls-1 {
