--- a/index.html
+++ b/index.html
@@ -1,117 +1,139 @@
-<!<!DOCTYPE html>
+
+
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Catherine Garcia</title>
-    <style type="text/css">
-body{
-        background-color: lightskyblue;
+<head>
+  <meta charset="utf-8">
 
-      }
-      p {font-family: monospace;}
+  <title>Catherine Garcia</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap">
+  <style>
+.purple-bg {
+      background-color: lightsteelblue;
+      padding: 10px;
+      border-radius: 10px;
+    }
 
-      p { 
+    body {
+      font-family: 'Roboto Condensed', sans-serif;
+      font-size: 35px;
+      background-color: lightskyblue;
+      color: black;
+    }
+
+    .header-box {
+      background-color: white;
+      border: double 10px;
+    }
+
+    .header {
+      background-color: floralwhite;
+      padding: 20px;
       text-align: center;
+    }
 
-       }
+    h1, p {
+      text-align: center;
+      font-size: 30px;
+    }
 
-      body { 
-  color: floralwhite;
-}
- body {
-   font-family: monospace;
-  }
-   
+    .margin-box {
+      background-color: whitesmoke;
+      height: 100px; 
+      width: 100%;
+    }
 
-h1 {
-  color: floralwhite;
-}
-  
-  h1{
-    text-align: center;
-  }
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 20px;
+    }
 
+    ul.myUL {
+      list-style-type: none;
+      display: grid;
+      grid-template-columns: repeat(8, minmax(34px, 12%));
+      gap: 10px;
+      padding: 0;
+    }
+
+    ul.myUL li {
+      background-color: white;
+      text-align: center;
+      padding: 19px 10px; 
+      border: double 12px;
+      border-radius: 20%;
+      font-size: 24px;
+    }
+
+    ul.myUL li a {
+      color: black;
+      text-decoration: none;
+    }
+
+    ul.myUL li a:hover {
+      color: darkviolet;
+    }
+    footer {
+      background-color: black;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      border-top: 3px solid white; 
+      font-size: 20px;
+    }
+
+    svg {
+      width: 20%;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+      margin-bottom: 35px;
+      margin-top: 8px;
+    }
+
+    .cls-6:hover {
+      fill: deeppink;
+    }
+
+    .cls-6:active {
+      fill: darkred;
+    }
+
+    .cls-2:hover {
+      fill: darkslategrey;
+    }
+
+    .cls-2:active {
+      fill: azure;
+    }
   </style>
-
-  </head>
-  <body style="font-size: 35px">
-    <h1 style="font-size: 38px;">Introduction to Web Design</h1>
-    <p style="font-size: 30px;">My name is Catherine Garcia. I am a Media Studies major and a Music minor. I took this course to learn more about coding and web design!</p>
-    <ul>
- <style>
-div.container {
-  text-align: center;
-}
-
-div {
-  margin-top: 50px;
-  margin-bottom: 100px;
-  margin-right: 500px;
-  margin-left: 500px;
-  background-color: lightsteelblue;
-}
-
-ul.myUL {
-  display: inline-block;
-  text-align: left;
-
-}
-
-
-ul.myUL {
-  
-  border-style: double;
-  border-width: 22px;
-  border-radius: 1px
-
-}
-</style>
-      <div class="container">
-  <ul class="myUL"> 
- 
-      <li><a href="./me/index.html">HTML</li></a> 
-      <li><a href= "./me_css/index.html">CSS</li></a>
-      <li><a href= "./raster_graphic/index.html">Raster Graphics</li></a>
-      <li><a href= "./vector_graphic/index.html">Vector Graphics</li></a>
+</head>
+<body> 
+  <div class="header-box">
+    <h1>Introduction to Web Design</h1>
+  </div> 
+  <div class="purple-bg">
+  <p>My name is Catherine Garcia. I am a Media Studies major and a Music minor. I took this course to learn more about coding and web design!</p>
+  </div>
+  <div class="container">
+    <ul class="myUL">
+      <li><a href="./me/index.html">HTML</a></li>
+      <li><a href="./me_css/index.html">CSS</a></li>
+      <li><a href="./raster_graphic/index.html">Raster Graphics</a></li>
+      <li><a href="./vector_graphic/index.html">Vector Graphics</a></li>
       <li>Website Layout</li>
       <li>Responsive Design</li>
       <li>JavaScript</li>
       <li>Final Project</li>
     </ul>
-    </div>
-  </body>
-<style type="text/css">
+  </div>
 
-  svg{ 
-      margin-top: -365;
-      width: 20%;
-      height: auto; 
-    } 
 
-.cls-6:hover{
-
-  fill: deeppink;
-}
-
-.cls-6:active{
-
-  fill: darkred;
-}
-
-.cls-2:hover{
-
-  fill: darkslategrey;
-}
-
-.cls-2:active{
-fill: azure;
-
-}
-  
-</style>
-</head>
-<body>
-<?xml version="1.0" encoding="UTF-8"?>
+    <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 591.41 832.04">
+    <title>Vector Graphic Logo</title>
+    <?xml version="1.0" encoding="UTF-8"?>
 <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 591.41 832.04">
   <title>Vector Graphic Logo</title>
   <defs>
@@ -196,5 +218,12 @@ fill: azure;
   <rect class="cls-7" x="308.1" y="441.66" width="101.19" height="13.66" transform="translate(-160.62 203.29) rotate(-26.07)"/>
   <text class="cls-10" transform="translate(461.08 809.96)"><tspan class="cls-1" x="0" y="0">C</tspan><tspan x="21.74" y="0">G</tspan></text>
 </svg>
-</body>
+  </svg>
+  <footer>
+    Copyright 2024
+  </footer>
+
 </html>
+
+
+
