--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <li><a href="./me_css/index.html">CSS</a></li>
       <li><a href="./raster_graphic/index.html">Raster Graphics</a></li>
       <li><a href="./vector_graphic/index.html">Vector Graphics</a></li>
-      <li>Website Layout</li>
+      <li><a href="https://docs.google.com/document/d/1oSr_-1lK9PeSW6B1CxPiz74_mwg9jxrh8ybYTlefp64/edit">Website Layout</a></li>
       <li>Responsive Design</li>
       <li>JavaScript</li>
       <li>Final Project</li>
