--- a/me_css/pages/music.html
+++ b/me_css/pages/music.html
@@ -89,7 +89,7 @@
         <a href="https://open.spotify.com/artist/2yEwvVSSSUkcLeSTNyHKh8">Tool</a>
       </li>
       <li>
-        <img class="animated-gif" src="https://i.gifer.com/Kfq7.gif" alt="Death Grips">
+        <img class="animated-gif" src="https://j.gifs.com/vn6ELj.gif" alt="Death Grips">
         <a href="https://open.spotify.com/artist/5RADpgYLOuS2ZxDq7ggYYH">Death Grips</a>
       </li>
       <li>
