--- a/me_css/index.html
+++ b/me_css/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Catherine Garcia Background</title>
+  <link rel="stylesheet" type="text/css" href="../styles/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap">
   <style>
     body {
@@ -61,6 +62,7 @@ a:visited {
     }
 
     .intro {
+      
       display: flex;
       flex-direction: column;
     }
