--- a/me_css/pages/films.html
+++ b/me_css/pages/films.html
@@ -11,6 +11,7 @@
   <style>
     
     main {
+
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -29,17 +30,21 @@
       justify-content: center;
     }
 
-
- ul li a {
-      display: block;
-      padding: 29px;
-      color: white;
-      text-decoration: none;
-      border: 2px solid black;
-      background-color: black;
+ul {
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr); 
+      gap: 10px; 
     }
 
+
+
     li {
+      border: 2px solid black;
+      text-align: center;
+    
       text-align: center;
     }
 
