--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
     body {
       font-family: 'Roboto Condensed', sans-serif;
       font-size: 35px;
-      background-color: lightskyblue;
+      background-color: cornflowerblue;
       color: black;
     }
 
     .header-box {
-      background-color: white;
+      color: white;
+      background-color: black;
       border: double 10px;
+      border-color: black;
     }
 
     .header {
