--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <li><a href="https://docs.google.com/document/d/1oSr_-1lK9PeSW6B1CxPiz74_mwg9jxrh8ybYTlefp64/edit">Website Layout</a></li>
       <li><a href="./responsive_design/index.html">Responsive Design</a></li>
       <li><a href="./responsive_design/index.html">JavaScript</a></li>
-      <li>Final Project</li>
+      <li><a href="./final_project/index.html">JavaScript</a>Final Project</li>
     </ul>
   </div>
 
